fixed navbar, fixed text alignment of headings

--- a/website/src/index.scss
+++ b/website/src/index.scss
@@ -15,3 +15,7 @@
 .text-justify {
     text-align: justify;
 }
+
+.text-justify > h1,h2,h3,h4 {
+    text-align: start;
+}
